<resources>
    <string name="app_name">SmartMesh</string>
    <string name="start_smt">Start SmartMesh</string>
    <string name="show_offline_hint">This account is already logged in on other devices , you are forced offline!</string>
    <string name="gesture_forget_gesture">Login Password</string>
    <string name="gesture_login">Gesture password</string>
    <string name="gesture_close">Use gesture password to close</string>
    <string name="gesture_pwd_close">Use wallet password to close</string>
    <string name="gesture_error">Invaild password</string>
    <string name="gesture_error_login">Too many password errors, please log in using your password</string>
    <string name="gesture_correct">Entered correctly</string>
    <string name="gesture_no_wallet">No wallet</string>
    <string name="gesture_wallet_open">Gesture: Open</string>
    <string name="gesture_wallet_close">Gesture: Close</string>
    <string name="raiden_channel_name">%s Channel</string>
    <string name="raiden_channel_create">Create</string>
    <string name="raiden_channel_add">Channel Add</string>
    <string name="raiden_channel_add_content_top">Add</string>
    <string name="raiden_channel_add_title">Add</string>
    <string name="raiden_channel_add_complete">Add to Complete</string>
    <string name="raiden_channel_create_enter">Enter Channel</string>
    <string name="raiden_channel_close">Sure to close the channel?</string>
    <string name="raiden_channel_open">Sure to open the channel?</string>
    <string name="raiden_channel_raiden">Raiden</string>
    <string name="raiden_pay">Pay:</string>
    <string name="raiden_pay_1">Pay</string>
    <string name="raiden_partner">Partner</string>
    <string name="raiden_address">Address</string>
    <string name="raiden_create_balance">Balance %s</string>
    <string name="raiden_partner_1">Partner</string>
    <string name="raiden_balance">Balance</string>
    <string name="raiden_channel_list_deposit">Deposit</string>
    <string name="raiden_balance_1">Balance</string>
    <string name="raiden_deposit">Deposit：</string>
    <string name="raiden_deposit_add">Add</string>
    <string name="raiden_token">Token:</string>
    <string name="raiden_token_1">Token</string>
    <string name="raiden_state">State</string>
    <string name="raiden_date">Date</string>
    <string name="raiden_to">To:</string>
    <string name="raiden_from">From:</string>
    <string name="raiden_pay_hint">Use offline Pay</string>
    <string name="raiden_channel_close_hint">Sure to close the channel？</string>
    <string name="raiden_channel_close_content">*Using channels does not need to consume Gas：0.00001 SMT</string>
    <string name="token_total_assets">Total Assets</string>
    <string name="token_total_price">≈￥%s</string>
    <string name="token_total_usd_price">≈$%s</string>
    <string name="token_search_empty_hint">Did not find a match?</string>
    <string name="token_search_empty_submit">Try submitting a new token at the bottom of the page</string>
    <string name="token_submit_no_token">There are no new Tokens</string>
    <string name="token_submit_token">Submit us a new Token</string>
    <string name="token_add_assets">Add new assets</string>
    <string name="wallet_old_balance">Ethereum Token Wallet</string>
    <string name="eth_token_0">Wallet description</string>
    <string name="eth_token_1">1. The main interface is Spectrum wallet</string>
    <string name="eth_token_2">2. The chain wallet does not show Ethereum Token</string>
    <string name="eth_token_3">3. The button at the bottom of the interface can enter the Ethereum Token wallet</string>
    <string name="eth_token_4">4. Completing the mapping will close the Ethereum Token wallet</string>
    <string name="eth_token_5">5. Map time please pay attention to the official website announcement</string>
    <string name="eth_token_6">Currency switch</string>
    <string name="wallet_copy_disclaimer">Disclaimer</string>
    <string name="wallet_copy_disclaimer_info">• Please ensure secure backup your wallet.SmartMesh APP cannot access accounts,recounts keys,reset passwords,nor reverse transactions.You are responsible for your security.\n\n• Tourists(no MID and bound phone number, email) to exit will not save wallet information.</string>
    <string name="create_gesture_set">Set gesture password</string>
    <string name="gesture_wallet_owd">please input password</string>
    <string name="create_gesture_default">Set gesture password</string>
    <string name="create_gesture_correct">Set gesture password again</string>
    <string name="create_gesture_less_error">At least 4 points required</string>
    <string name="create_gesture_confirm_error">Inconsistent with the previous drawing, please re-draw</string>
    <string name="create_gesture_confirm_correct">Success</string>
    <string name="create_gesture_reset">Preset gesture</string>
    <string name="create_gesture_confirm">Confirm</string>
    <string name="login">Login</string>
    <string name="login_validating">Validating</string>
    <string name="login_pwd_error">Username or password incorrect</string>
    <string name="login_state_failure">Please login again</string>
    <string name="regist">Sign up</string>
    <string name="wallet_mode">Wallet pattern</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_hint">Forgot password</string>
    <string name="account_pwd">Account password</string>
    <string name="account_pwd_input">Set password</string>
    <string name="account_pwd_login_input">Enter password</string>
    <string name="account_pwd_again_input">Confirm password</string>
    <string name="account_pwd_again_warning">Password does not match</string>
    <string name="account_pwd_info_input">Password hint</string>
    <string name="account_input_pwd_warning">Please enter your account password</string>
    <string name="account_name_exist">Username already exists</string>
    <string name="account_update_mid">SmartMesh ID</string>
    <string name="account_input_mid">Enter SmartMesh ID</string>
    <string name="account_content_mid">You can customize the MID for login and user search.</string>
    <string name="account_upload_regist_info">For account safety, please enter MID to ensure login success</string>
    <string name="account_logout_warn">Exit the prompt</string>
    <string name="account_logout_hint">By logging out, there will NOT be any new message alert but all the historial data will be stored. </string>
    <string name="account_logout_mid_warn">Please read the following instructions carefully:</string>
    <string name="account_logout_email_hint">Binding Email or Phone to ensure the account safety</string>
    <string name="account_logout_mid_hint">Not set MID, bind phone or email account will not be able to log in again, and the wallet can not be retrieved. Are you sure you want to do this?</string>
    <string name="account_logout_mid_hint_again">Your account will not be able to log in again after you click OK. If you have used your wallet, please check if it is backed up.</string>
	<string name="account_name_warning">Please enter 1–20 digits for username</string>
    <string name="account_pwd_warning">Please enter 6 – 18 digit for password</string>
    <string name="mid_length_warning">Please enter 6 – 20 digits for MID</string>
    <string name="mid_content_warning">MID cannot only contain number</string>
    <string name="mid_user">MID:&quot; %s</string>
    <string name="main_chats">Chat</string>
    <string name="main_discover">Discover</string>
    <string name="main_contact">Contacts</string>
    <string name="account">Account</string>
    <string name="myself">Me</string>
    <string name="smart_mesh">SMART&quot;&quot;&quot;&quot;  MESH</string>
    <string name="exit_app">Press again to exit SmartMesh</string>
    <string name="transcation_records">Transactions</string>
    <string name="transcation_detail">Transaction Detail</string>
    <string name="transcation_search">Search Transaction</string>
    <string name="transcation_failed">Transaction Failed</string>
    <string name="account_manager">Manage Account</string>
    <string name="setting">Settings</string>
    <string name="wallet">Wallet</string>
    <string name="security">Security</string>
    <string name="submit_feedback">Feedback</string>
    <string name="qm_qm">Scan QR Code</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="qr_code">QR code</string>
    <string name="copy_address">Copy address</string>
    <string name="copy_link">Copy link</string>
    <string name="copy_end">Copied to clipboard</string>
    <string name="trans_success">Transfer successful</string>
    <string name="trans_empty">No transaction record</string>
    <string name="get_gas_error">Unable to obtain gas</string>
    <string name="syning_later">syncing try later</string>
    <string name="balance_er">Balance: %s</string>
    <string name="eth">ETH</string>
    <string name="smt">SMT</string>
    <string name="mesh">MESH</string>
    <string name="eth_balance">%s ETH</string>
    <string name="smt_balance">%s SMT</string>
    <string name="mesh_balance">%s MESH</string>
    <string name="eth_er">%s ETHER</string>
    <string name="smt_er">%s SMT</string>
    <string name="token_trans"> %1$s %2$s </string>
    <string name="hint_pwd_warning">To ensure safety of your balance, please do not disclose your privacy to others. </string>
    <string name="report_reason_1">I don\'t like the user</string>
    <string name="report_reason_2">I don\'t accept this user\'s speech</string>
    <string name="report_reason_3">Harassment or humiliation</string>
    <string name="report_reason_4">Hate speech (Discrimination)</string>
    <string name="report_reason_5">Prefer not to say</string>
    <string name="report_reason_6">Intellectual property infringement</string>
    <string name="report_reason_7">Commercial spam harassment</string>
    <string name="report_reason_8">Infringement</string>
    <string name="report_reason_9">Illegal drugs</string>
    <string name="enter_please_code_number">Please enter the verification code</string>
    <string name="enter_code_number">Enter the verification code</string>
    <string name="enter_email_number">Please enter your email</string>
    <string name="bind_email_warning">Please Bind Email to ensure account safety</string>
    <string name="bind_mobile_number">Your phone number is：%s</string>
    <string name="email">Email</string>
    <string name="sms_verify_hint">SMS has successfully sent to</string>
    <string name="phone_book">Contacts</string>
    <string name="replace_phone">Change phone number</string>
    <string name="wallet_create_new">Create</string>
    <string name="wallet_import_new">Import</string>
    <string name="report_problem">Problem</string>
    <string name="suggestions_for_improvement">Suggestion</string>
    <string name="problem_info">What\'s the problem?</string>
    <string name="advice_info_hint">Please leave your valuable opinions and Suggestions, we will try to improve.</string>
    <string name="email_info">Your email address?</string>
    <string name="email_info_hint">Please leave your email address.</string>
    <string name="submit_ok">Submit</string>
    <string name="wallet_keysotre_info">Keystore text content</string>
    <string name="wallet_keysotre_pwd">KeyStore&quot;&quot; password</string>
    <string name="wallet_import_start">Start importing</string>
    <string name="wallet_official_info">Copy and paste Ether keystore, or scan QR code</string>
    <string name="wallet_show_private_key">Current account private key</string>
    <string name="wallet_private_key_check_out">Private key can only be exported once, please keep it safe</string>
    <string name="wallet_copy_private_key_2">Copy private key</string>
</resources>