<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:layout_margin="10dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="20dp"
    android:paddingBottom="25dp"
    android:background="@drawable/icon_eth_bg"
    android:orientation="vertical">

    <TextView
        style="@style/eth_popup_style"
        android:text="@string/eth_token_0" />

    <TextView
        style="@style/eth_popup_style"
        android:text="@string/eth_token_1" />

    <TextView
        style="@style/eth_popup_style"
        android:text="@string/eth_token_2" />

    <TextView
        style="@style/eth_popup_style"
        android:text="@string/eth_token_3" />

    <TextView
        style="@style/eth_popup_style"
        android:text="@string/eth_token_4" />

    <TextView
        style="@style/eth_popup_style"
        android:text="@string/eth_token_5" />

</LinearLayout>