<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_title_layout"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallet_show_private_key"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/walletPrivateKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_round_hintcolor_5"
        android:textSize="14sp"
        android:layout_margin="15dp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:minLines="3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallet_private_key_check_out"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/textColorHint"
        android:visibility="gone"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/walletCopyPrivateKey"
        style="@style/WalletStyle"
        android:text="@string/wallet_copy_private_key_2"
        android:background="@drawable/selector_round_black_5"
        />

</LinearLayout>