<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_title_layout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:visibility="gone"
        android:textColor="@color/textColorHintPrimary"
        android:text="@string/sms_verify_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/textColorHintPrimary"
        android:text="@string/enter_code_number"/>

    <EditText
        android:id="@+id/codeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:textColor="@color/textColorHint"
        android:hint="@string/enter_please_code_number"
        android:inputType="number"
        android:background="@null"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/tab_sep_line"/>
</LinearLayout>