<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_title_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@color/textColor">
        <ImageView
            android:id="@+id/phoneImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/bind_mobile_success"/>

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/bind_mobile_number"
            android:textColor="@color/black"/>

    </LinearLayout>


    <TextView
        android:id="@+id/phoneBook"
        style="@style/WalletStyle"
        android:text="@string/phone_book"
        android:textColor="@color/black"
        android:visibility="gone"
        android:background="@drawable/selector_gradient_yellow_30"/>


    <TextView
        android:id="@+id/replacePhone"
        style="@style/WalletStyle"
        android:text="@string/replace_phone"
        android:textColor="@color/black"
        android:background="@drawable/selector_round_primary_line_30"/>

</LinearLayout>