<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_title_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/textColor"
        android:orientation="horizontal"
        android:layout_height="50dp">

        <LinearLayout
            android:id="@+id/reportProblem"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:gravity="center"
                android:textColor="@drawable/selector_primary_tab"
                android:text="@string/report_problem"/>

            <View
                android:id="@+id/reportLine"
                android:layout_width="80dp"
                android:layout_gravity="center"
                android:background="@color/black"
                android:layout_height="2dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/suggestImprovement"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:padding="5dp"
                android:gravity="center"
                android:textColor="@drawable/selector_primary_tab"
                android:text="@string/suggestions_for_improvement"/>


            <View
                android:id="@+id/suggestLine"
                android:layout_width="80dp"
                android:layout_gravity="center"
                android:background="@color/black"
                android:visibility="invisible"
                android:layout_height="2dp"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/tab_sep_line"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/submitType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColor="@drawable/selector_primary_tab"
                android:text="@string/problem_info"/>

            <EditText
                android:id="@+id/problemEt"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:gravity="top|left"
                android:textSize="14sp"
                android:textColor="@color/textColorHint"
                android:hint="@string/advice_info_hint"
                android:background="@drawable/shape_round_write_2"/>

            <EditText
                android:id="@+id/suggestEt"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:padding="10dp"
                android:gravity="top|left"
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:textColor="@color/textColorHint"
                android:visibility="gone"
                android:hint="@string/advice_info_hint"
                android:background="@drawable/shape_round_write_2"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textColor="@drawable/selector_primary_tab"
                android:text="@string/email_info"/>

            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:textColor="@color/textColorHint"
                android:inputType="textEmailAddress"
                android:hint="@string/email_info_hint"
                android:background="@drawable/shape_round_write_2"/>


            <TextView
                android:id="@+id/submit"
                style="@style/WalletStyle"
                android:text="@string/submit_ok"
                android:background="@drawable/selector_round_black_5"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>